--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .hidden {
   display: none;
+}
+.must-timer {
+  font-size: 48px;
+  font-weight: 600;
+  margin-top: 33%;
 }
