--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  height: 100vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,12 +17,12 @@ body {
   font-size: 70px;
   font-weight: 600;
   color: white;
-  margin:30% 0 10% 0;
+  margin: 25vh 0 7vh 0;
   text-shadow: 0px 0px 20px black;
 }
-.must-form{
-    display: flex;
-    justify-content: center;
+.must-form {
+  display: flex;
+  justify-content: center;
 }
 .must-form input {
   border: 0;
@@ -30,21 +30,20 @@ body {
   border-bottom: 3px solid white;
   text-align: center;
   font-size: 30px;
-  padding:7px 0;
-  background-color:rgba(0, 0, 0, 0.2);
+  padding: 7px 0;
+  background-color: rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   color: white;
   font-weight: 600;
   text-shadow: 0px 0px 20px black;
 }
-.must-form input::placeholder{
-    color: white;
-    
+.must-form input::placeholder {
+  color: white;
 }
-.must-todo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.must-todo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .must-todo span {
   font-size: 50px;
@@ -53,12 +52,14 @@ body {
   margin-right: 10px;
   text-shadow: 0px 0px 10px black;
 }
-.must-todo button{
-    height: 48px;
-    width: 48px;
-    border-radius: 25%;
-    border: none;
-    box-shadow: 0px 0px 10px black;
-    font-size: 20px;
-    font-weight: 600;
+.must-todo button {
+  height: 48px;
+  width: 48px;
+  border-radius: 25%;
+  border: none;
+  box-shadow: 0px 0px 10px black;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  color: black;
 }
